<?xml version="1.0"?>
<package>
  <name>chessbot</name>
  <version>0.0.0</version>
  <description>The chessbot package</description>
  <maintainer email="morgan@osrfoundation.org">Morgan Quigley</maintainer>
  <license>BSD</license>
  <author email="morgan@osrfoundation.org">Morgan Quigley</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <export></export>
</package>
